--- a/META.yml
+++ b/META.yml
@@ -1,7 +1,8 @@
 --- 
-author: Ricardo SIGNES <rjbs@cpan.org>
+author: 
+  - Ricardo SIGNES <rjbs@cpan.org>
 distribution_type: module
-generated_by: Module::Install version 0.67
+generated_by: Module::Install version 0.68
 license: perl
 meta-spec: 
   url: http://module-build.sourceforge.net/META-spec-v1.3.html
@@ -14,4 +15,5 @@ no_index:
 requires: 
   Data::GUID: 0
   Sub::Exporter: 0
-version: 0.002
+tests: t/*.t xt/*.t
+version: 0.003
