--- a/META.yml
+++ b/META.yml
@@ -1,19 +1,21 @@
---- 
-author: 
-  - Ricardo SIGNES <rjbs@cpan.org>
+---
+author:
+  - 'Ricardo SIGNES <rjbs@cpan.org>'
 distribution_type: module
-generated_by: Module::Install version 0.68
+generated_by: 'Module::Install version 0.77'
 license: perl
-meta-spec: 
-  url: http://module-build.sourceforge.net/META-spec-v1.3.html
-  version: 1.3
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
 name: Data-GUID-URLSafe
-no_index: 
-  directory: 
+no_index:
+  directory:
     - inc
     - t
-requires: 
+requires:
   Data::GUID: 0
   Sub::Exporter: 0
-tests: t/*.t xt/*.t
-version: 0.003
+resources:
+  license: http://dev.perl.org/licenses/
+  repository: http://github.com/rjbs/data-guid-urlsafe
+version: 0.004
